# volestipy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: example_birkhoff.py  example_diagnostics.py  example_hypercube.py  example_random_polytope.py  example_rounding.py
include/: sampling_minimal.hpp
src/bindings/: volesti_bindings.cpp
tests/: conftest.py  test_hpolytope.py  test_integration.py  test_vpolytope.py
volestipy/: __init__.py
